--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "dev": "vite",
     "build": "NODE_OPTIONS=--max_old_space_size=1024 npx vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.5",
     "dotenv": "^16.4.4",
-    "@heroicons/react": "^2.1.1",
     "flowbite-react": "^0.7.2",
     "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "openai": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.0.0",
