--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "build": "NODE_OPTIONS=--max_old_space_size=1024 npx vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "pm2 start 'npm run dev' --name my-app --watch"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
+    "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.5",
+    "daisyui": "^4.6.0",
     "dotenv": "^16.4.4",
     "flowbite-react": "^0.7.2",
     "html5-qrcode": "^2.3.8",
