--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "NODE_OPTIONS=--max_old_space_size=1024 npx vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "pm2 start 'npm run dev' --name my-app --watch"
+    "start": "node node_modules/pm2/bin/pm2 start 'npm run dev' --name my-app --watch"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
@@ -17,7 +17,6 @@
     "@heroicons/react": "^2.1.1",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.15.3",
-    "@mui/material": "^5.15.3",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.5",
     "daisyui": "^4.6.0",
@@ -53,6 +52,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "pm2": "^5.2.0"
   }
 }
