--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "NODE_OPTIONS=--max_old_space_size=1024 vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "vite preview --port $PORT"
+    "preview": "vite preview --host 0.0.0.0 --port 5000",
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
